# holocard-display

./: README.md  README.txt  pyproject.toml
assets/: ingenuity.mkv
assets/video/: ingenuity.mkv  shuttle.mkv  starfighter.mkv
holocard_display/: __main__.py  display_control.py  nfc_handlers.py  nfc_listener.py  repository.py
util/: read_nfc.py  write_nfc.py
